# TexturePacker

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak2  README.md  icon.rc  setup.bat
include/: stb_image_write.h
samples/: Spritesheet.h  SpritesheetReader.cpp  SpritesheetReader.h
src/: TexturePacker.cpp  TexturePacker.h  main.cpp
